--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^2.7"
+requests = "^2.23.0"
+beautifulsoup4 = "^4.9.0"
 
 [tool.poetry.dev-dependencies]
 
